# notebooklm-mcp-agent

./: .codespellrc  .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  SECURITY.md  SUPPORT.md  Taskfile.yml  mkdocs.yml  pyproject.toml  renovate.json
.github/: AGENTS.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  security_hardening.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  publish.yml  release-please.yml  scorecard.yml  security.yml
deploy/: Dockerfile  docker-compose.yml
docs/: AGENTS.md  configuration.md  faq.md  glossary.md  index.md  install.md  quickstart.md  troubleshooting.md
docs/architecture/: overview.md  principles.md
docs/architecture/adr/: 003-starlette-cve-pin.md  004-branch-protection.md  005-concurrency-groups.md  006-ruff-toolchain-update.md  index.md
docs/clients/: chatgpt.md  claude-desktop.md  cursor.md  vscode.md
docs/development/: bot-reviewers.md  cli-reference.md  release.md  setup.md  testing.md
docs/migrating/: from-prior-package.md
docs/release/: branch-protection.md  process.md
docs/security/: scorecard.md  third-party-dependencies.md  threat-model.md
docs/tools/: admin.md  artifacts.md  catalog.md  chat.md  index.md  language.md  notebooks.md  openapi.json  research.md  sources.md
fuzz/: config_fuzzer.py
scripts/: _repo_scan.py  check_arch_boundaries.py  check_architecture.py  check_config_docs.py  check_docs_commands.py  check_forbidden_terms.py  check_no_secrets.py  check_openapi_parity.py  check_owner_refs.py  check_public_surface.py  check_release_ready.py  check_tool_catalog.py  clean_artifacts.py  fuzz_smoke.py  generate_checksums.py  generate_cli_reference.py  generate_openapi_snapshot.py  generate_tool_catalog.py  list_tools.py  setup-branch-protection.ps1  setup-branch-protection.sh  smoke.sh
src/nlm_mcp/: __init__.py  __main__.py
src/notebooklm_mcp_agent/: AGENTS.md  __init__.py  __main__.py  cli.py  config.py  logging_setup.py  openapi.py  server.py
src/notebooklm_mcp_agent/auth/: AGENTS.md  __init__.py  middleware.py  oauth.py  token.py
src/notebooklm_mcp_agent/backend/: AGENTS.md  __init__.py  client.py  tasks.py
src/notebooklm_mcp_agent/openapi/: AGENTS.md
src/notebooklm_mcp_agent/prompts/: __init__.py
src/notebooklm_mcp_agent/resources/: __init__.py  artifact.py  notebook.py
src/notebooklm_mcp_agent/tools/: AGENTS.md  __init__.py  admin.py  artifacts.py  chat.py  common.py  compat.py  language.py  notebooks.py  research.py  sources.py
src/notebooklm_mcp_agent/transport/: __init__.py  stdio_runner.py
tests/: test_bootstrap.py  test_cli.py
tests/e2e/: test_full_flow.py
tests/integration/: test_stdio_smoke.py
tests/unit/: test_auth.py  test_backend_client.py  test_backend_exceptions.py  test_backend_tasks.py  test_config.py  test_logging_setup.py  test_oauth.py  test_openapi.py  test_retry.py  test_server.py  test_stdio_runner.py  test_tools_artifacts.py  test_tools_common.py  test_tools_compat.py  test_tools_core.py  test_tools_language.py
